[Fix] 유저 거주지역 저장 방식 변경